--- a/src/app.scss
+++ b/src/app.scss
@@ -1,10 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: lightblue;
-  color: lightgreen;
-}
+@import 'partials/_variables.scss';
+@import 'partials/_common.scss';
+@import 'partials/_mixin.scss';
