--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -16,12 +16,16 @@ ul {
 a {
   text-decoration: none;
 }
+.container {
+  width: 85%;
+  margin: auto;
+}
 .navbar {
   position: fixed;
   top: 0;
   left: 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
   height: 80px;
   z-index: 1030;
@@ -30,6 +34,8 @@ a {
 }
 .jumbotron {
   height: 600px;
+  width: 85%;
+  margin: auto;
   background-color: yellow;
 }
 main {
