--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -34,8 +34,7 @@ a {
 }
 .jumbotron {
   height: 600px;
-  width: 85%;
-  margin: auto;
+  margin-top: 80px;
   background-color: yellow;
 }
 main {
