--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -1,3 +1,5 @@
+@import 'partials/_variables.scss';
+@import 'partials/_mixin.scss';
 * {
   margin: 0;
   padding: 0;
@@ -21,11 +23,10 @@ a {
   margin: auto;
 }
 .navbar {
+  @include display-flex-between;
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  justify-content: space-between;
   width: 100%;
   height: 80px;
   z-index: 1030;
