--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -18,11 +18,6 @@ ul {
 a {
   text-decoration: none;
 }
-.container {
-  width: 85%;
-  margin: auto;
-  @include display-flex-between;
-}
 .navbar {
   position: fixed;
   top: 0;
@@ -30,8 +25,31 @@ a {
   width: 100%;
   height: 80px;
   z-index: 1030;
-  padding: 20px;
-  background-color: #000000;
+  padding: 40px;
+  background-color: #fff;
+  @include display-flex-between;
+}
+
+.nav_left,
+.nav_right {
+  @include display-flex-align-center;
+}
+.nav_left {
+  img {
+    margin-right: $marginRight;
+  }
+  h2 {
+    color: #4E3D1E;
+    font-weight: lighter;
+  }
+}
+.nav_right {
+  li {
+    margin-right: $marginRight;
+  }
+}
+.login_btn {
+  @include login-button;
 }
 .jumbotron {
   height: 600px;
