--- a/src/partials/_mixin.scss
+++ b/src/partials/_mixin.scss
@@ -5,9 +5,10 @@
 }
 @mixin display-flex-align-center {
   display: flex;
+  align-items: center;
 }
 @mixin login-button {
-  padding: 7px 17px;
+  padding: 7px 10px;
   border: 1px solid #30488f;
   border-radius: 10px;
 }
