--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,2 +1,7 @@
-$marginRight: 15px;
-$textcolorbrown: #4E3D1E;
+// size
+$marginRight15: 15px;
+$marginRight40: 40px;
+$widthInner: 80%;
+
+// colors
+$primarycolor: #4E3D1E;
