--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -1,5 +1,3 @@
-@import 'partials/_variables.scss';
-@import 'partials/_mixin.scss';
 * {
   margin: 0;
   padding: 0;
@@ -7,10 +5,17 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: HarmoniaSansProCyr-Regular, Arial, sans-serif;
   font-size: 14px;
-  color: $textcolorbrown;
+  color: $primarycolor;
 }
+@font-face {
+  font-family: HarmoniaSansProCyr-Regular, Arial, sans-serif;
+  src:
+      local("HarmoniaSansProCyr-Regular"),
+      url('https://teambit.io/wp-content/themes/teambeat/fonts/HarmoniaSansProCyr-Regular_gdi.woff') format("woff");
+}
+
 ul {
   list-style: none;
   display: flex;
@@ -18,62 +23,4 @@ ul {
 }
 a {
   text-decoration: none;
-}
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80px;
-  z-index: 1030;
-  padding: 20px 120px;
-  background-color: #fff;
-  @include display-flex-between;
-}
-
-.nav_left,
-.nav_right {
-  display: flex;
-}
-.nav_left {
-  img {
-    margin-right: $marginRight;
-  }
-  h2 {
-    font-weight: lighter;
-  }
-}
-.nav_right {
-  li {
-    margin-right: $marginRight;
-    a {
-      color: $textcolorbrown;
-      font-weight: bolder;
-    }
-    .login_btn img {
-      width: 20px;
-      margin-right: 5px;
-    }
-  }
-}
-.login_btn {
-  @include login-button;
-  @include display-flex-align-center;
-}
-.jumbotron {
-  height: 600px;
-  margin-top: 80px;
-  background-color: yellow;
-}
-main {
-  background-color: purple;
-  height: 1000px;
-  section {
-    height: calc(100% / 3);
-    border: 1px solid blue;
-  }
-}
-footer {
-  height: 400px;
-  background-color: green;
 }
