up jumbo almost complete

--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -5,15 +5,9 @@
 }
 
 body {
-  font-family: HarmoniaSansProCyr-Regular, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   color: $primarycolor;
-}
-@font-face {
-  font-family: HarmoniaSansProCyr-Regular, Arial, sans-serif;
-  src:
-      local("HarmoniaSansProCyr-Regular"),
-      url('https://teambit.io/wp-content/themes/teambeat/fonts/HarmoniaSansProCyr-Regular_gdi.woff') format("woff");
 }
 
 ul {
@@ -23,4 +17,7 @@ ul {
 }
 a {
   text-decoration: none;
+}
+.flex {
+  display: flex;
 }
