--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
 @import 'partials/_variables.scss';
 @import 'partials/_mixin.scss';
 @import 'partials/_common.scss';
 @import 'partials/_header.scss';
 @import 'partials/_main.scss';
 @import 'partials/_footer.scss';
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
