--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -10,7 +10,6 @@
 
 .nav_left {
   img {
-    margin-left: 40px;
     margin-right: $marginRight15;
   }
   h2 {
@@ -21,8 +20,10 @@
   .hamburger_menu {
     display: none;
   }
-  li {
+  li:not(:last-child) {
     margin-right: $marginRight40;
+  }
+  li {
     a {
       color: $primarycolor;
       font-weight: bold;
@@ -50,7 +51,6 @@
     }
     .hamburger_menu {
       display: block;
-      margin-right: $marginRight40;
     }
   }
 }
@@ -62,10 +62,9 @@
   width: $widthInner;
   margin: 70px auto;
   .title_wrapper {
-    width: calc(100% / 2);
-    padding: 35px;
+    padding: 35px 35px 0 0;
     h1 {
-      font-size: 45px;
+      font-size: 50px;
       line-height: 65px;
       font-weight: normal;
     }
@@ -110,16 +109,31 @@
     }
   }
   .jumbo_wrapper {
-    width: calc(100% / 2);
     img {
-      width: 100%;
-      height: 100%;
+      max-width: 570px;
     }
   }
 
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1257px) {
   .jumbotron {
     flex-wrap: wrap;
+    .title_wrapper {
+      text-align: center;
+      padding: 0;
+    }
+    .jumbo_wrapper {
+      width: 100%;
+      text-align: center;
+      & img {
+        width: 100%;
+        margin-top: 50px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 500px) {
+  .sign_up_btn {
+    display: block;
   }
 }
