--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -8,6 +8,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   color: $primarycolor;
+  min-width: 380px;
 }
 
 ul {
@@ -20,4 +21,9 @@ a {
 }
 .flex {
   display: flex;
+}
+
+.wrapper_80 {
+  width: $widthInner;
+  margin: auto;
 }
