--- a/src/partials/_mixin.scss
+++ b/src/partials/_mixin.scss
@@ -9,6 +9,11 @@
 }
 @mixin login-button {
   padding: 7px 10px;
-  border: 1px solid #30488f;
+  border: 1px solid $secondColor;
   border-radius: 10px;
+}
+@mixin flex-center-wrap {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
