--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,6 +1,14 @@
 // size
 $marginRight15: 15px;
 $marginRight40: 40px;
+$marginTop50: 50px;
+$marginTop80: 80px;
+$marginBottom30: 30px;
+$marginBottom40: 40px;
+$padding30: 30px;
+$padding60: 60px;
+$paddingTop50: 50px;
+
 $widthInner: 80%;
 
 // colors
@@ -8,3 +16,13 @@ $primarycolor: #4E3D1E;
 $secondColor: #30488f;
 $thirdColor: #F3DCC8;
 $borderColor: #C5BBB3;
+
+
+// typography
+$titleFontSize: 26px;
+
+
+
+// breakpoint size
+$xsmallScreen: 480px;
+$mediumScreen: 780px;
