--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -6,6 +6,7 @@ $marginTop50: 50px;
 $marginTop80: 80px;
 $marginBottom30: 30px;
 $marginBottom40: 40px;
+$marginBottom50: 50px;
 
 $padding30: 30px;
 $padding60: 60px;
