--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -4,6 +4,8 @@ $marginRight40: 40px;
 $marginTop20: 20px;
 $marginTop50: 50px;
 $marginTop80: 80px;
+$marginTop100: 100px;
+
 $marginBottom30: 30px;
 $marginBottom40: 40px;
 $marginBottom50: 50px;
