--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -35,4 +35,5 @@ $xxsmallScreen: 480px;
 $xsmallScreen: 500px;
 $mediumScreen: 780px;
 $moreMediumScreen: 850px;
+$moreAndMoreMediumScreen: 950px;
 $largeScreen: 1257px;
